# pwauth-entity

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  alire.toml  configure  configure.ac  pwauth.gpr  pwauth_entity.gpr
.github/workflows/: ada.yml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.2  traces.3
src/: pwauth_entity.ads  work-punks-authority.adb  work-punks-authority.ads  work-punks.ads  work.ads
tests/: Makefile  test_driver.adb  test_lib.adb  test_lib.ads  tests.gpr  user_json_test.adb  user_json_test.ads
